testing/errors/obsolete1.a
	!cbm	; -> ""!cbm" is obsolete; use "!ct pet" instead."
